[BE] Slim room listing and Redis-backed access checks